fix(package.json): Correct `main file path` in package.json.
[BRANCH: master]

--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Brikcss Spacing</title>
-	<link rel="stylesheet" type="text/css" href="../../dist/spacing.init.css">
+	<link rel="stylesheet" type="text/css" href="../../dist/spacing.css">
 	<style type="text/css">
 		* {
 			box-sizing: border-box;
